-- Compatibil Oracle 23c (free)




CREATE TABLE obiectiv_turistic (
    id_obiectiv NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nume VARCHAR2(255) NOT NULL,
    descriere VARCHAR2(255),
    adresa VARCHAR2(255),
    oras VARCHAR2(100),
    tip_obiectiv VARCHAR2(100),
    medie_rating number(5,2),
    vizitabil BOOLEAN DEFAULT TRUE,
    CONSTRAINT u_obiectiv UNIQUE(nume) 
);


CREATE TABLE parc (
    id_obiectiv NUMBER PRIMARY KEY,
    suprafata NUMBER,
    tip_vegetatie VARCHAR2(255),
    facilitati VARCHAR2(255),
    FOREIGN KEY (id_obiectiv) 
     REFERENCES obiectiv_turistic(id_obiectiv)
);


CREATE TABLE monument (
    id_obiectiv NUMBER PRIMARY KEY,
    data_constructie DATE,
    stil_architectural VARCHAR2(255),
    istorie VARCHAR2(255),
    FOREIGN KEY (id_obiectiv)
     REFERENCES obiectiv_turistic(id_obiectiv)
);

CREATE TABLE fotografii_obiectiv (
    id_obiectiv NUMBER,
    id_fotografie NUMBER GENERATED BY DEFAULT AS IDENTITY,
    url_fotografie VARCHAR2(255) NOT NULL,
    descriere_fotografie CLOB,
    data_incarcare DATE,
    PRIMARY KEY (id_obiectiv, id_fotografie),
    FOREIGN KEY (id_obiectiv) 
      REFERENCES obiectiv_turistic(id_obiectiv)
);


CREATE TABLE UTILIZATOR (
    id_utilizator NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nume_user VARCHAR2(50) UNIQUE NOT NULL,
    email VARCHAR2(255) UNIQUE NOT NULL,
    parola VARCHAR2(255) NOT NULL,
    data_inregistrare DATE DEFAULT sysdate,
    CONSTRAINT ck_utilizator1 CHECK (length(parola) >7) 
);

CREATE TABLE rating (
    id_utilizator NUMBER,
    id_obiectiv NUMBER,
    rating NUMBER,
    comentariu VARCHAR2(255),
    data_rating DATE,
    PRIMARY KEY (id_utilizator, id_obiectiv),
    FOREIGN KEY (id_utilizator) 
     REFERENCES utilizator(id_utilizator),
    FOREIGN KEY (id_obiectiv) 
     REFERENCES obiectiv_turistic(id_obiectiv)
);

CREATE SEQUENCE program_seq 
START WITH 1 INCREMENT BY 1;


CREATE TABLE program (
    id_program NUMBER,
    id_obiectiv NUMBER,
    zi varchar2(20),
    ora_deschidere varchar2(8),
    ora_inchidere varchar2(8),
    tarif NUMBER,
    PRIMARY KEY ( id_obiectiv, id_program)
);


CREATE TABLE favorite (
    id_utilizator NUMBER,
    id_obiectiv NUMBER,
    PRIMARY KEY (id_utilizator, id_obiectiv),
    FOREIGN KEY (id_utilizator) 
     REFERENCES utilizator(id_utilizator),
    FOREIGN KEY (id_obiectiv) 
     REFERENCES obiectiv_turistic(id_obiectiv)
);


CREATE TABLE urmareste (
    id_utilizator NUMBER,
    id_followed NUMBER,
    PRIMARY KEY (id_utilizator, id_followed),
    FOREIGN KEY (id_utilizator) 
      REFERENCES utilizator(id_utilizator),
    FOREIGN KEY (id_followed) 
     REFERENCES utilizator(id_utilizator)
);

